fix for mobile nav spacing bug

--- a/css/dronekit.css
+++ b/css/dronekit.css
@@ -3,7 +3,6 @@ html {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   padding-right: 0px !important;
   overflow-x: hidden;
-  margin-right: -20px;
 }
 .nav{
   padding-top: 80px;
